--- a/public/rtest.html
+++ b/public/rtest.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8">
     <title>Responsive Design Testing</title>
     <style>
-      body { margin: 20px; font-size:16px; overflow-x: scroll;margin-left:5em; }
+      body { margin: 20px; font-size:16px; overflow-x: scroll; none;margin-left:5em; }
       .wrapper { width: 6000px; }
       .frame { float: left; }
       h2 { margin: 0 0 5px 0; }
-      iframe { margin: 0 20px 20px 0; border: 1px solid #666; }
+      iframe { margin: 0 20px 20px 0; border: 1px solid #666; height:1000px;}
     </style>    
   </head>
   <body>
